fix: section mobile height

--- a/styles/section.scss
+++ b/styles/section.scss
@@ -3,3 +3,7 @@
   min-height: calc(100vh - 320px);
   padding: 160px 0;
 }
+
+.mobile {
+  min-height: 100%;
+}
